--- a/SalaoIedaV4.csproj
+++ b/SalaoIedaV4.csproj
@@ -171,6 +171,14 @@
     <Compile Include="Migrations\201710110203281_pap3.Designer.cs">
       <DependentUpon>201710110203281_pap3.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201710242323505_v8.cs" />
+    <Compile Include="Migrations\201710242323505_v8.Designer.cs">
+      <DependentUpon>201710242323505_v8.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201710242327437_v9.cs" />
+    <Compile Include="Migrations\201710242327437_v9.Designer.cs">
+      <DependentUpon>201710242327437_v9.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Agenda.cs" />
     <Compile Include="Models\Cliente.cs" />
@@ -400,6 +408,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201710110203281_pap3.resx">
       <DependentUpon>201710110203281_pap3.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201710242323505_v8.resx">
+      <DependentUpon>201710242323505_v8.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201710242327437_v9.resx">
+      <DependentUpon>201710242327437_v9.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
